style/_main__hero.scss
@import './variables';
@import './_mixins';

.hero {
	// outline: 0.5px solid red;
	margin: 4vw auto;
}

.hero__name {}

.hero__word {
	font: 900 2rem $font-titles;
	letter-spacing: -0.35em;
	line-height: 1.3em;
	text-transform: uppercase;
	color: transparent;
	-webkit-text-stroke: 1px $light;

	transition: all 0.35s ease-in-out;

	@include media-sm {
		font-size: 4rem;
	}

	@include media-lg {
		-webkit-text-stroke: 2px $light;
		font-size: 6rem;
	}

	@include media-xl {
		font-size: 8rem;
	}

	&:hover {
		-webkit-text-stroke: 2px $orange;
		letter-spacing: 0.2em;

		.hero__letter {
			-webkit-text-stroke: 2px $orange;

			@include media-lg {
				-webkit-text-stroke: 4px $orange;
			}
		}
	}

}

.hero__letter {
	letter-spacing: 0.15em;
	font-size: 1.5em;
	color: transparent;
	-webkit-text-stroke: 1px $green;

	@include media-lg {
		-webkit-text-stroke: 2px $green;
	}
}

.hero__profession {
	color: $orange;
	font: 900 2rem $font-titles;

	transition: all 0.2s ease-in-out;

	&:hover {
		text-shadow: 1px 1px 5px $green;
		letter-spacing: 0.1em;
	}

	@include media-sm {
		font-size: 4rem;
	}

	@include media-lg {
		font-size: 6rem;
	}
}

.hero__social {
	margin: $offset-basic * 4 auto;

	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.hero__span {
	display: block;
	margin: $offset-basic *2;
	text-align: center;
	text-transform: capitalize;
}

.hero__item {
	margin: $offset-basic *2 $offset-basic *8;
	padding: $offset-basic;
	border-radius: $border-radius-default;
	transition: all 0.25s ease-in-out;

	.hero__link {
		color: $light;
	}

	&:hover {
		transform: scale(1.2);

		.hero__link {
			color: $orange;
		}

		.icon__svg {
			stroke: $orange;
			fill: $orange;
		}
	}

	&:focus{
		box-shadow: 2px 2px 10px $orange, -2px -2px 10px $orange;
	}
}

.hero__link {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

